# assignment-7-amandoee

./: CMakeLists.txt  README.md  tempCodeRunnerFile  tempCodeRunnerFile.c
include/: stack.h  taylor_sine  taylor_sine.h
src/: main.cpp  stack.c  taylor_sine.c
tests/: CMakeLists.txt
tests/src/: tests.cpp
